Added minor changes.

--- a/WebAppDemo/WebApp/Pages/Index.razor
+++ b/WebAppDemo/WebApp/Pages/Index.razor
@@ -5,6 +5,6 @@
 <h1>Blazor WebAssemply</h1>
 <h3>C# code runs in your browser</h3>
 <h3>However, a WASM app has some rextrictions:</h3>
-<h3>All data access must go via APIs</h3>
+<h3>All data access must go via APIs SQlite</h3>
+<h3>A local SQlite is also an option...</h3>
 <img src="/Images/HMBeauty.png"
-<SurveyPrompt Title="How is Blazor working for you?" />
